--- a/client/views/home/home.html
+++ b/client/views/home/home.html
@@ -16,11 +16,11 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Sign In</a>
+                        <a class="page-scroll" href="#portfolio">{{> loginButtons}}</a>
                     </li>
 
                     <li>
-                        <a class="page-scroll" href="#services">Listings</a>
+                        <a class="page-scroll" href="#listings">Listings</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
@@ -88,9 +88,9 @@
     
 </div>
 
-
+    
     {{> listingsList}}
-
+    
     
     {{> contact}}
     
