--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -1,3 +1,23 @@
+/*Miscellaneous=======================================*/
+.grid-block, .main, .post, .comments li, .comment-form {
+  
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
+  border-radius: 3px;
+  padding: 0px;
+  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15); }
+
+.alert-error {
+color: #b94a48;
+background-color: #f2dede;
+border-color: #eed3d7;
+}
+
+/* MAIN ===================================*/
 .background {
     width: 200px;
     height: 200px;
@@ -25,7 +45,7 @@
     margin-right: auto;
 }
 
-/* SIGN IN/ SIGN UP SECTION */
+/* SIGN IN/ SIGN UP SECTION ============================*/
 #signInTitle {
     text-transform: none;
 }
@@ -34,7 +54,7 @@
     background-color: transparent;
 }
 
-/* BODY */
+/* BODY ===============================================*/
 body {
     overflow-x: hidden;
     font-family: "Roboto Slab","Helvetica Neue",Helvetica,Arial,sans-serif;
@@ -898,7 +918,27 @@ body {
   height: 500px;
 }
 
-/* Styling for post page===========================================*/
+/* SUBMIT POST PAGE===========================================*/
+
+.submitPost {
+  list-style: none;
+  text-align: right;
+  padding-right: 15px;
+}
+
+.submitPost a {
+  color: white;
+  text-decoration: none;
+}
+
+.glyphicon-plus {
+  color: rgb(26,41,119);
+}
+
+
+
+/*LISTING PAGE==================================================*/
+
 #sidebar {
   background-color: rgb(239,239,239);
 }
@@ -938,27 +978,6 @@ font-size: 16px;
 padding-top: 12px;
 }
 
-.submitPost {
-  list-style: none;
-  text-align: right;
-  padding-right: 15px;
-}
-
-.submitPost a {
-  color: white;
-  text-decoration: none;
-}
-
-.glyphicon-plus {
-  color: rgb(26,41,119);
-}
-
-.alert-error {
-color: #b94a48;
-background-color: #f2dede;
-border-color: #eed3d7;
-}
-
 .load-more {
   display: block;
   -webkit-border-radius: 3px;
@@ -977,17 +996,9 @@ border-color: #eed3d7;
     background: rgba(0, 0, 0, 0.1); }
 
 
-.grid-block, .main, .post, .comments li, .comment-form {
-  
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  -ms-border-radius: 3px;
-  -o-border-radius: 3px;
-  border-radius: 3px;
-  padding: 0px;
-  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15);
-  -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15);
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15); }
+    
+
+
   
 .post {
   /* For modern browsers */
@@ -1037,3 +1048,4 @@ border-color: #eed3d7;
     display: block;
     float: right;
     margin-top: 7px; }
+
