--- a/client/views/home/listings/listingsList.html
+++ b/client/views/home/listings/listingsList.html
@@ -1,7 +1,6 @@
 <template name ="listingsList">
 
-		<!-- Services Section -->
-    <section id="services">
+		<!-- Listings Section -->
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -59,5 +58,5 @@
                 </div>
             </div>
         </div>
-    </section>
+    
 </template>
