some submit page styling

--- a/client/views/listings/postSubmit/postSubmit.html
+++ b/client/views/listings/postSubmit/postSubmit.html
@@ -1,9 +1,15 @@
 <template name="postSubmit">
 {{postContext}}
-  <form class="main">
+<div class = "titlePost">
+     <h3 class = "postPageTitle">Submit a Listing</h3>
+        <p class = "postPageTitle"> And put an end to asking everyone you know for everything</p>
+        </div>
+  <form class="mainPostPage">
+   
     <div class="control-group">
-        <label class="control-label" for="title">Title of Post</label>
+        <label class="control-label" for="title"></label>
         <div class="controls">
+            Category
             <input name="title" type="text" value="" placeholder=""/>
         </div>
     </div>
@@ -21,6 +27,7 @@
             <input name="emails" type="text" value="" placeholder=""/>
         </div>
     </div>
+
 
 
     <div class="control-group">
