--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -1,7 +1,37 @@
-.background {
-    width: 200px;
-    height: 200px;
+
+/* POST PAGE */ 
+
+.titlePost {
+    margin-top: 48px;
+    padding-top: 55px;
+    padding-bottom: 55px;
+    margin-left: auto;
+    margin-right: auto;
+    border: solid;
+    border-width: 1px;
+    border-color: rgb(230,230,230)
+
 }
+.mainPostPage {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    background-color: #f7f7f7;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.postPageTitle {
+    text-align: center;
+}
+
+.control-group {
+    display: table;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+/* END OF POST PAGE */
+
 
 @media (min-width: 768px) {
     .container {
@@ -895,7 +925,7 @@ body {
   top: 0;
   left: 0;
   min-width: 100%;
-  height: 500px;
+  min-height:100%;
 }
 
 /* Styling for post page===========================================*/
