--- a/client/views/home/home.html
+++ b/client/views/home/home.html
@@ -43,7 +43,7 @@
       
         <div class="item active">
           
-          <img class = "background" src="/resources/upenn.jpg" alt="First slide">
+          <img src="/resources/upenn.jpg" alt="First slide">
           <div class="container">
 
             <div class="carousel-caption">
