--- a/client/views/listings/postSubmit/postSubmit.html
+++ b/client/views/listings/postSubmit/postSubmit.html
@@ -29,7 +29,6 @@
     </div>
 
 
-
     <div class="control-group">
         <label class="control-label" for="category">Category for Post</label>
         <div class="controls">
@@ -58,5 +57,21 @@
         </div>
     </div>
   </form>
+  
+<span class="btn btn-default btn-file">
+    Browse <input type="file">
+</span>
+  
 </template>
+
+
+
+
+
+
+
+
+
+
+
 
