--- a/client/views/home/home.html
+++ b/client/views/home/home.html
@@ -16,7 +16,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Sign In</a>
+                        <a class="page-scroll" href="#portfolio">{{> loginButtons}}</a>
                     </li>
 
                     <li>
