--- a/client/views/listings/postSubmit/postSubmit.html
+++ b/client/views/listings/postSubmit/postSubmit.html
@@ -2,18 +2,19 @@
     {{postContext}}
     <div class = "titlePost">
        <h3 class = "postPageTitle">Submit a Listing</h3>
-       <p class = "postPageTitle"> And stop asking everyone you know for everything</p>
+       <p class = "postPageTitle"> And stop asking everyone you know for everything you need</p>
    </div>
-   <div class="mainPostPage"> 
 
-     <div class="control-group">
-        <div class="div2">
-            <div class = "sub1-2">
-                Category
-            </div>
-        </div>
+
+<div class="mainPostPage"> 
+    <div id="leftbar">
+        
+    </div>
+    
+    <div id="rightbar">
         <div class="div3">
             <div class="div4">
+                Category
                 <button class = "buttonListings dropdown">
                   <a href="#" data-toggle="dropdown" class="dropdown-toggle" id ="listingDropdown"><i class="fa fa-shopping-cart"></i>&nbsp;&nbsp;For Sale</a>
                   <div class="dropdown-menu multi-column">
@@ -74,75 +75,26 @@
             </button>
         </div>
     </div>
-</div>
-
-<div class="control-group">
-        <div class="div2">
-            <div class = "sub1-2">
-                Title
-            </div>
-        </div>
-        <div class="div3">
-            <input name="emails" type="text" value="" placeholder=" Acct. 102 Textbook, Roommate Wanted..." class = "inputPost"/>
-    </div>
-</div>
-
-<div class="control-group">
-        <div class="div2">
-            <div class = "sub1-2">
-                Description
-            </div>
-        </div>
-        <div class="div3">
-            <input name="emails" type="text" value="" placeholder="" class = "inputPost"/>
-    </div>
-</div>
-
-<div class="control-group">
-        <div class="div2">
-            <div class = "sub1-2">
+        <div class="div3 titleDiv">
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Title
+            <input name="emails" type="text" value="" placeholder="Acct. 102 Textbook, Roommate Wanted..." class = "inputPost title"/>
                 Price
-            </div>
+            <input name="emails" type="text" value="" placeholder="$25" class = "inputPost price"/>
+        </div>
+        <div class="div3 descriptionDiv">
+          Description
+            <textarea name="emails" type="text" value="" placeholder="Used for one semester, in good condition" class = "inputPost descriptionInput"></textarea>
         </div>
         <div class="div3">
-            <input name="emails" type="text" value="" placeholder="" class = "inputPost"/>
-    </div>
-</div>
-
-<div class="control-group">
-        <div class="div2">
-            <div class = "sub1-2">
-                Reply-To Name
-            </div>
+          Reply-To
+            <input name="emails" type="text" value="" placeholder="Jake Noonan" class = "inputPost replyName name"/>
+            Reply-To Email
+            <input name="emails" type="text" value="" placeholder="noonanja@wharton.upenn.edu" class = "inputPost replyEmail"/>
         </div>
-        <div class="div3">
-            <input name="emails" type="text" value="" placeholder="" class = "inputPost"/>
+      </div>
     </div>
-</div>
 
-<div class="control-group">
-        <div class="div2">
-            <div class = "sub1-2">
-                Reply-To Email
-            </div>
-        </div>
-        <div class="div3">
-            <input name="emails" type="text" value="" placeholder="" class = "inputPost"/>
-    </div>
-</div>
 
-<div class="control-group">
-<div class="fileinput fileinput-new" data-provides="fileinput">
-  <div class="fileinput-new thumbnail" style="width: 200px; height: 150px;">
-    <img data-src="holder.js/100%x100%" alt="...">
-  </div>
-  <div class="fileinput-preview fileinput-exists thumbnail" style="max-width: 200px; max-height: 150px;"></div>
-  <div>
-    <span class="btn btn-default btn-file"><span class="fileinput-new">Select image</span><span class="fileinput-exists">Change</span><input type="file" name="..."></span>
-    <a href="#" class="btn btn-default fileinput-exists" data-dismiss="fileinput">Remove</a>
-  </div>
-</div>
-</div>
 
-</div> 
+   
 </template>
