--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -1,7 +1,86 @@
 /* POST PAGE */ 
 
+.titleDiv {
+    margin-left: 2px;
+}
+.name {
+    margin-right: 38px;
+}
+.title {
+    margin-right: 75px;
+}
+.labelSubmit {
+    color: black;
+    font-size: 20px;
+    margin-bottom: 30px;
+    margin-top: 34px;
+    margin-right: 13px;
+}
+
+#content{
+    position: relative;
+    width: 100%;
+    top: 100px;
+    bottom: 100px;
+
+}
+
+#leftbar{
+    position: absolute;
+    width: 25%;
+    height: 100%;
+    overflow:auto;
+    text-align: right;
+}
+
+
+#rightbar{
+    padding-left:25%;
+    height:100%;
+    overflow: auto;
+}
+
+.replyToEmail {
+    margin-right: 374px;
+}
+
+.replyToName {
+    margin-right: 377px;
+}
+
+.description {
+    width: 300px !important;
+    margin-right: 351px;
+    
+}
+
 .inputPost {
-    height: 35px;
+    height: 40px;
+    width:300px;
+    text-align: center;
+    border: solid;
+    border-width: 1px;
+    border-color: rgb(230,230,230);
+    margin-left: 0px;
+
+}
+.descriptionInput {
+    width: 645px;
+    text-align: left;
+    height: 70px;
+}
+.replyName {
+    width: 190px;
+}
+.replyEmail {
+    margin-left: 10px;
+    width: 260px;
+}
+
+.price {
+    width: 125px;
+    margin-right: 78px;
+    margin-left: 10px;
 }
 .multi-column {
     padding:0px;
@@ -65,6 +144,21 @@
     display:table-cell;
 }
 
+
+.div3 {
+    display: grid;
+    margin-top: 20px;
+    font-size: 20px;
+    width:1000px;
+}
+
+.inputPost {
+    font-size: 14px;
+}
+.div4 {
+    width: 800px;
+}
+
 .titleContainer {
     background-color: white;
     border: solid;
@@ -73,9 +167,6 @@
     padding: 13px 18px 13px 18px;
 }
 
-.inputPost {
-    width: 300px;
-}
 
 .titlePost {
     margin-top: 48px;
@@ -88,6 +179,7 @@
     border-color: rgb(230,230,230);
 
 }
+
 .mainPostPage {
     padding-top: 20px;
     padding-bottom: 20px;
@@ -1145,3 +1237,4 @@ border-color: #eed3d7;
     display: block;
     float: right;
     margin-top: 7px; }
+
