--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -1,5 +1,17 @@
 /* POST PAGE */ 
-.title
+.continue {
+    margin-top: 30px;
+    margin-left: 320px;
+}
+
+.descDiv {
+    margin-left: -20px;
+}
+
+.textArea {
+    display: inline-flex;
+}
+
 .titleDiv {
     margin-left: 2px;
 }
@@ -25,20 +37,10 @@
 
 }
 
-#leftbar{
-    position: absolute;
-    width: 25%;
-    height: 100%;
-    overflow:auto;
-    text-align: right;
-}
-
-
 #rightbar{
-    padding-left:25%;
+    padding-left:20%;
     height:100%;
-    overflow: auto;
-}
+    }
 
 .replyToEmail {
     margin-right: 374px;
@@ -51,6 +53,7 @@
 .description {
     width: 300px !important;
     margin-right: 351px;
+
     
 }
 
@@ -67,7 +70,8 @@
 .descriptionInput {
     width: 645px;
     text-align: left;
-    height: 70px;
+    height: 60px;
+    resize: vertical;
 }
 .replyName {
     width: 190px;
@@ -116,6 +120,7 @@
 .dropdown {
     list-style: none;
 }
+
 .dropdown:hover .dropdown-menu {
     display: block;
 }
@@ -134,6 +139,7 @@
     border-color: rgb(230,230,230);
     font-size: 15px;
 }
+
 .buttonListings:hover {
     z-index: 10;
     border-color: black;
@@ -147,17 +153,15 @@
 
 .div3 {
     display: grid;
-    margin-top: 20px;
+    margin-top: 30px;
     font-size: 20px;
-    width:1000px;
+    min-width: 770px;
 }
 
 .inputPost {
     font-size: 14px;
 }
-.div4 {
-    width: 800px;
-}
+
 
 .titleContainer {
     background-color: white;
