--- a/client/views/listings/postSubmit/postSubmit.html
+++ b/client/views/listings/postSubmit/postSubmit.html
@@ -91,9 +91,13 @@
             Reply-To Email
             <input name="emails" type="text" value="" placeholder="noonanja@wharton.upenn.edu" class = "inputPost replyEmail"/>
         </div>
+       
+        <button type="button" class="btn btn-success btn-lg">
+            <span class="glyphicon glyphicon-share-alt"></span><a id = "continue"> Continue </a>
+        </button>
+
       </div>
     </div>
-
 
 
    
