--- a/client/views/listings/postSubmit/listingPostSubmit.html
+++ b/client/views/listings/postSubmit/listingPostSubmit.html
@@ -1,5 +1,5 @@
 <template name = "listingPostSubmit">
     <li id="LI_1">
-		<a href="{{pathFor 'listingPage'}}"> {{title}} </a>
+		<a href="#"> {{title}} </a>
 	</li>
 </template>
