adding images, got all the way until PostPage..
just stuck trying to get the thumbnails to show on the post page

--- a/client/views/listings/postSubmit/postContinue.html
+++ b/client/views/listings/postSubmit/postContinue.html
@@ -63,7 +63,7 @@
 
   <div class="control-group">
         <div class="controls">
-            <input type="submit" value="Submit" class="btn btn-primary"/>
+            <input id= "submitPost" type="submit" value="Submit" class="btn btn-primary"/>
         </div>
   </div>
 
