--- a/client/views/listings/postPage/postItemPostPage.html
+++ b/client/views/listings/postPage/postItemPostPage.html
@@ -4,5 +4,17 @@
 			<h3><a href="{{url}}">{{title}}</a></h3>
 			{{authors}}, {{category}}, {{price}}, {{description}}
 		</div>
+		{{#each dataEntries}}
+          <div class="col-sm-6 col-lg-2">
+            <div class="thumbnail">
+              {{#if isImage}}
+                <a href="{{link}}"><img class="img-thumbnail" alt="[ preview of {{shortFilename 16}} will display here ]" src="{{link}}" width="150"></a>
+                <div class="caption text-center"><a href="{{link}}?download=true">{{shortFilename 16}}</a></div>
+              {{else}}
+                <span class="text-muted text-center">No preview</span>
+              {{/if}}
+            </div>
+	</div>
+	{{/each}}  
 	</div>
 </template>
