fucking gucci on images
remind me to “check data subscriptions”

--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -879,6 +879,13 @@ aside.clients img {
     margin: 50px auto;
 }
 
+
+/*HOME PAGE (I think?)========================================*/
+.page-scroll:hover {
+    cursor: pointer;
+}
+
+
 section#contact {
     background-color: #222;
     background-image: url(../img/map-image.png);
