--- a/client/views/listings/listingPage/postsList.html
+++ b/client/views/listings/listingPage/postsList.html
@@ -1,6 +1,25 @@
 <template name="postsList">
     {{#each postsWithRank}}
-      {{> postItem}}
+   <!-- Since our animation (from sorting and limiting number displayed) will affect our DOM element’s CSS attributes and classes, we’ll add a dynamic {{attributes}} helper. -->
+	<div class="post" {{attributes}}>
+		<div class="post-content">
+			<h3><a href="{{pathFor 'postPage'}}">{{title}}</a></h3>
+			{{#if ownPost}} Edit Post {{/if}}
+		</div>
+		{{#each dataEntries}}
+          <div class="col-sm-6 col-lg-2">
+            <div class="thumbnail">
+              {{#if isImage}}
+                <a href="{{link}}"><img class="img-thumbnail" alt="[ preview of {{shortFilename 16}} will display here ]" src="{{link}}" width="150"></a>
+                <div class="caption text-center"><a href="{{link}}?download=true">{{shortFilename 16}}</a></div>
+              {{else}}
+                <span class="text-muted text-center">No preview</span>
+              {{/if}}
+            </div>
+	      </div>
+	     {{/each}}  
+	</div>
+
     {{/each}}
 
     {{#if moreResults}}
