--- a/client/views/home/listings/listing.html
+++ b/client/views/home/listings/listing.html
@@ -1,5 +1,5 @@
 <template name = "listing">
     <li id="LI_1">
-		<a href="{{pathFor 'listingPage'}}"> {{title}} ({{count}})</a>
+		<a href="{{pathFor 'listingPage'}}" id="listing"> {{title}} ({{count}})</a>
 	</li>
 </template>
