--- a/client/views/home/home.html
+++ b/client/views/home/home.html
@@ -6,7 +6,7 @@
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header page-scroll">
                 
-                <a class="logo page-scroll" href="#">logo</a>
+                <a class="logo page-scroll" href="/">logo</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
