--- a/client/views/listings/listingPage/topBarListingPage.html
+++ b/client/views/listings/listingPage/topBarListingPage.html
@@ -5,7 +5,7 @@
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header page-scroll">
                 
-                <a class="logo page-scroll" href="#">logo</a>
+                <a class="logo page-scroll" href="/">logo</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
