--- a/client/views/home/listings/listingsList.html
+++ b/client/views/home/listings/listingsList.html
@@ -1,7 +1,7 @@
-<template name ="listingsList">
+<template name ="listingsList" class = "listings">
 
 		<!-- Listings Section -->
-        <div class="container">
+        <div class="containerListings">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Listings</h2>
