--- a/client/views/home/topSection/signUp.html
+++ b/client/views/home/topSection/signUp.html
@@ -43,7 +43,7 @@
             {{/if}}
 
             {{> entryExtraSignUpFields}}
-            <button type="submit" class="submit btn btn-block btn-default">{{t9n "signUp"}}</button>
+            <button type="submit" class="submit btn btn-block btn-default">Sign Up</button>
           </form>
         {{/if}}
         {{#if both}}
