--- a/client/views/listings/listingPage/listingPage.html
+++ b/client/views/listings/listingPage/listingPage.html
@@ -1,6 +1,6 @@
 <template name="listingPage">
 
-  {{> listingPageHeader}}
+  <!-- {{> listingPageHeader}} -->
 
   <!--main-->
   <div class="container">
